Fix styling on mobile

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -12,11 +12,15 @@
 .header__title {
   color: white;
   text-decoration: none;
+  padding-left: 80px;
   h1 {
     margin: 0;
     &:hover {
       color: darken(white, 7);
     }
+  }
+  @media (min-width: $desktop-breakpoint) {
+    padding-left: 0px;
   }
 }
 
@@ -29,6 +33,10 @@
 .header__displayName {
   color: white;
   font-weight: 100;
+  font-size: 85%;
+  @media (min-width: $desktop-breakpoint) {
+    font-size: 100%;
+  }
 }
 
 .header_logout-justify {
